# hunk

./: Cargo.toml  README.md  bump_version.sh
src/: main.rs  parse_args.rs  test.rs
test_data/: 1.diff  1_color.diff  empty_file_section.diff  empty_file_tail.diff  invalid_unicode.diff  invalid_unicode_2.diff  invalid_unicode_whole_hunk.diff  make_long.sh  only_header.diff  only_header_and_file_header_tail.diff  unicode_chars_CJK.diff  unique_tail.diff
