[package]
name = "hunktool"
version = "0.3.0"
edition = "2021"
description = "A tool for finding strings in git patches/history"
license = "MPL-2.0"
readme = "README.md"
homepage = "https://github.com/TheBicPen/hunk"
repository = "https://github.com/TheBicPen/hunk.git"
keywords = ["version-control", "git"]
categories = ["command-line-utilities", "development-tools"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.15.7"
